日本語化など対応

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
+
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PDF Utility Pro</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://unpkg.com/react-pdf@8.0.0/dist/Page/AnnotationLayer.css" />
-    <link rel="stylesheet" href="https://unpkg.com/react-pdf@8.0.0/dist/Page/TextLayer.css" />
-    <link rel="preconnect" href="https://unpkg.com" />
-<script type="importmap">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PDF Utility Pro</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://unpkg.com/react-pdf@8.0.0/dist/Page/AnnotationLayer.css" />
+  <link rel="stylesheet" href="https://unpkg.com/react-pdf@8.0.0/dist/Page/TextLayer.css" />
+  <link rel="preconnect" href="https://unpkg.com" />
+  <script type="importmap">
 {
   "imports": {
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
@@ -19,10 +20,12 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="/index.css">
 </head>
+
 <body class="bg-slate-50">
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
 </body>
+
 </html>
