--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="shortcut icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PDF Utility Pro</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <title>WeLovePDF</title>
   <link rel="stylesheet" href="https://unpkg.com/react-pdf@8.0.0/dist/Page/AnnotationLayer.css" />
   <link rel="stylesheet" href="https://unpkg.com/react-pdf@8.0.0/dist/Page/TextLayer.css" />
   <link rel="preconnect" href="https://unpkg.com" />
@@ -20,7 +24,7 @@
   }
 }
 </script>
-  <link rel="stylesheet" href="/index.css">
+
 </head>
 
 <body class="bg-slate-50">
